package be.intecbrussel.model.book;


public class ChildrenBooks extends Book{

    public ChildrenBooks(String bookTitle, String bookAuthor, int bookPublishYear, BookStatus status) {
        super(bookTitle, bookAuthor, bookPublishYear, status);
    }
}
