package be.intecbrussel.model.book;

public class NonFictionBooks extends Book{

    public NonFictionBooks(String bookTitle, String bookAuthor, int bookPublishYear, BookStatus status) {
        super(bookTitle, bookAuthor, bookPublishYear, status);
    }
}
