package be.intecbrussel.model.book;

public class OtherBooks extends Book{

    public OtherBooks(String bookTitle, String bookAuthor, int bookPublishYear, BookStatus status) {
        super(bookTitle, bookAuthor, bookPublishYear, status);
    }
}
